--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "svgxuse": "^1.2.3",
     "lightgallery": "^1.3.9",
     "wow": "wow.js#^1.1.2",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jquery-smooth-scroll": "^2.1.2"
   },
   "ignore": [
     "**/.*",
