--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ kramdown:
   hard_wrap: false
 highlighter: rouge
 company: Jamal Benmiloud
-email: agostina@jamalbenmiloud.com
+email: jamal@jamalbenmiloud.com
 google_site_verification: P7aG-KqXbk4H0kr9f5uzYHgAtDtHdgUmv7jktOc0zwE
 analytics: UA-96108323-1
 logo: "/assets/img/logo.svg"
